<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyDataSync</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="login_button">登录</string>
    <string name="wellcome_regist">欢迎注册</string>
    <string name="regist_user_name">用户名</string>
    <string name="regist_user_password1">密码</string>
    <string name="regist_user_password2">确认</string>
    <string name="regist_user_mail">邮箱</string>
    <string name="regist_button">注册</string>
    <string name="regist_text">点击注册-&gt;&gt;</string>
    <string name="table_host_item_backup">数据备份</string>
    <string name="login_button_text2">连接中</string>
    <string name="login_button_text3">连接失败</string>
    <string name="login_button_text4">连接成功</string>
    <string name="title_login_btn">登录</string>

</resources>
