<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/wellcome_regist"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TableLayout
            android:id="@+id/tablelayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/textView1"
            android:layout_marginTop="30dp"
            android:stretchColumns="1" >

            <TableRow
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_user_name"
                    android:paddingRight="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/regist_user_name"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="" />
            </TableRow>

            <TableRow
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_user_password1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/regist_user_password1"
                    android:inputType="textPassword"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="" />
            </TableRow>
            
            <TableRow
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_user_password2"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/regist_user_password2"
                    android:inputType="textPassword"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="" />
            </TableRow>
            
            <TableRow
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_user_mail"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/regist_user_mail"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="" />
            </TableRow>
        </TableLayout>
        
        <Button 
            android:id="@+id/regist_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tablelayout1"
            android:text="@string/regist_button"/>
    </RelativeLayout>

</ScrollView>